--- a/stable/airflow/values.yaml
+++ b/stable/airflow/values.yaml
@@ -508,7 +508,7 @@ dags:
   git:
     ##
     ## url to clone the git repository
-    url: https://github.com/marclamberti/airflow-dags.git
+    url: https:/github.com/gnishanth4/airflow-dags.git
     ##
     ## branch name, tag or sha1 to reset to
     ref: master
